Flickity Redesign - Beginnings

--- a/index.html
+++ b/index.html
@@ -4,258 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>#JavaScript30</title>
+    <title>#JavaScript 30</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
-    <header>
-        <h1><span class="hashtag">#</span>JavaScript<span class="thirty">30</span></h1>
-        <p class="subtitle">A <a href="http://wesbos.com/" target="_blank">Wes Bos</a> Challenge</p>
-    </header>
-    <main class="gridSection">
-        <ul class="daysList">
-            <li class="dayItem">
-                <a class="dayLink" href="/day01">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">01</h2>
-                        <p class="dayTitle">Drum Machine</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day02">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">02</h2>
-                        <p class="dayTitle">Analog Clock</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day03">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">03</h2>
-                        <p class="dayTitle">CSS Variables</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day04">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">04</h2>
-                        <p class="dayTitle">Array Cardio</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day05">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">05</h2>
-                        <p class="dayTitle">Flex Panels</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day06">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">06</h2>
-                        <p class="dayTitle">Ajax</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day07">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">07</h2>
-                        <p class="dayTitle">Array Cardio II</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day08">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">08</h2>
-                        <p class="dayTitle">HTML5 Canvas</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day09">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">09</h2>
-                        <p class="dayTitle">Tool Tricks</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day10">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">10</h2>
-                        <p class="dayTitle">Checkbox: Expert</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day11">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">11</h2>
-                        <p class="dayTitle">Custom Video</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day12">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">12</h2>
-                        <p class="dayTitle">Konami Code</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day13">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">13</h2>
-                        <p class="dayTitle">Scroll Fun</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day14">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">14</h2>
-                        <p class="dayTitle">Ref v Copy</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day15">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">15</h2>
-                        <p class="dayTitle">Local Storage</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day16">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">16</h2>
-                        <p class="dayTitle">Text Shadow</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day17">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">17</h2>
-                        <p class="dayTitle">Skip the "The"</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day18">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">18</h2>
-                        <p class="dayTitle">Using .reduce()</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day19">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">19</h2>
-                        <p class="dayTitle">Webcam Fun</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day20">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">20</h2>
-                        <p class="dayTitle">Speech Recognition</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day21">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">21</h2>
-                        <p class="dayTitle">Geolocation</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day22">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">22</h2>
-                        <p class="dayTitle">Follow Along Links</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day23">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">23</h2>
-                        <p class="dayTitle">Speech Synthesis</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day24">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">24</h2>
-                        <p class="dayTitle">Sticky Navs</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day25">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">25</h2>
-                        <p class="dayTitle">Events Fun</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day26">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">26</h2>
-                        <p class="dayTitle">Stripe Dropdown</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day27">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">27</h2>
-                        <p class="dayTitle">Click & Drag</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day28">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">28</h2>
-                        <p class="dayTitle">Video Speed</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day29">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">29</h2>
-                        <p class="dayTitle">Countdown Clock</p>
-                    </div>
-                </a>
-            </li>
-            <li class="dayItem">
-                <a class="dayLink" href="/day30">
-                    <div class="dayWrapper">
-                        <h2 class="dayNumber">30</h2>
-                        <p class="dayTitle">Whack A Mole</p>
-                    </div>
-                </a>
-            </li>
-        </ul>
-    </main>
+    <div class="carousel">
+        <header class="carousel-cell">
+            <h1><span class="hashtag">#</span>JavaScript<span class="thirty">30</span></h1>
+            <p class="subtitle">A <a href="http://wesbos.com/" target="_blank">Wes Bos</a> Challenge</p>
+        </header>
+        <section class="carousel-cell">
+
+        </section>
+    </div>
 </body>
 </html>
