--- a/index.html
+++ b/index.html
@@ -7,16 +7,33 @@
     <title>#JavaScript 30</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="public/styles/flickity.css">
 </head>
 <body>
-    <div class="carousel">
-        <header class="carousel-cell">
+    <div class="main-carousel">
+        <header class="carousel-cell landingPage">
             <h1><span class="hashtag">#</span>JavaScript<span class="thirty">30</span></h1>
             <p class="subtitle">A <a href="http://wesbos.com/" target="_blank">Wes Bos</a> Challenge</p>
         </header>
         <section class="carousel-cell">
-
+            <iframe class="pageContent" src="pages/day01.html" frameborder="0"></iframe>
+        </section>
+        <section class="carousel-cell">
+            <iframe class="pageContent" src="pages/day02.html" frameborder="0"></iframe>
+        </section>
+        <section class="carousel-cell">
+            <iframe class="pageContent" src="pages/day03.html" frameborder="0"></iframe>
+        </section>
+        <section class="carousel-cell">
+            <iframe class="pageContent" src="pages/day05.html" frameborder="0"></iframe>
         </section>
     </div>
+    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <script src="public/scripts/flickity.pkgd.js"></script>
+    <script>
+        $('.main-carousel').flickity({
+            contain: true
+        });
+    </script>
 </body>
 </html>
