--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <section class="carousel-cell">
             <iframe class="pageContent" src="pages/day05.html" frameborder="0"></iframe>
         </section>
+        <section class="carousel-cell">
+            <iframe class="pageContent" src="pages/day06.html" frameborder="0"></iframe>
+        </section>
     </div>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src="public/scripts/flickity.pkgd.js"></script>
