--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <script src="public/scripts/flickity.pkgd.js"></script>
     <script>
         $('.main-carousel').flickity({
-            contain: true
+            contain: true,
+            arrowShape: {
+                x0: 10,
+                x1: 75, y1: 50,
+                x2: 70, y2: 5,
+                x3: 40
+            }
         });
     </script>
 </body>
