--- a/pages/day01.html
+++ b/pages/day01.html
@@ -38,10 +38,17 @@
 			position: relative;
 		}
 
+		@media (max-width: 768px) {
+			.key {
+				width: 25%;
+			}
+		}
+
 		.playing {
 			transform: scale(1.1);
 			border-color: #12B4E9;
 			box-shadow: 0 0 1rem #12B4E9;
+			color: #12B4E9;
 		}
 
 		kbd {
@@ -136,7 +143,6 @@
 	}
 
 	const playSound = function(event) {
-		console.log(event)
 		const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
 		const key = document.querySelector(`div[data-key="${event.keyCode}"]`);
 		if(!audio) return;
@@ -145,7 +151,6 @@
 		key.classList.add('playing');
 	}
 	const clickSound = function(event) {
-		//console.log(event.path['1'].dataset.key);
 		const keyData = event.path['1'].dataset.key;
 		const audio = document.querySelector(`audio[data-key="${keyData}"]`);
 		const key = document.querySelector(`div[data-key="${keyData}"]`);
