--- a/pages/day02.html
+++ b/pages/day02.html
@@ -107,8 +107,8 @@
 		}
 
 		.clock {
-			width: 30rem;
-			height: 30rem;
+			width: 30vw;
+			height: 30vw;
 			border:20px solid rgb(39, 39, 39);
 			border-radius:50%;
 			margin:50px auto;
