--- a/pages/day05.html
+++ b/pages/day05.html
@@ -9,7 +9,7 @@
 	<style>
 		html {
 			box-sizing: border-box;
-			background:#ffc600;
+			background:#12B4E9;
 			font-family:'helvetica neue';
 			font-size: 20px;
 			font-weight: 200;
@@ -49,7 +49,6 @@
 			align-items: center;
 			flex-direction: column;
 		}
-
 
 		.panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
 		.panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
