--- a/pages/day06.html
+++ b/pages/day06.html
@@ -66,7 +66,17 @@
 		}
 
 		.hl {
-			background:#12B4E9;
+			background:rgba(18, 179, 233, 0.5);
+		}
+
+		@media (max-width: 500px) {
+			.search-form {
+				max-width: 85%;
+				margin: 50px auto;
+			}
+			input.search {
+				font-size: 30px;
+			}
 		}
 	</style>
 </head>
