--- a/pages/day01.html
+++ b/pages/day01.html
@@ -13,7 +13,6 @@
 			padding: 0;
 			font-family: sans-serif;
 		}
-
 		.keys {
 			display: flex;
 			flex: 1;
@@ -22,7 +21,6 @@
 			justify-content: center;
 			flex-wrap: wrap;
 		}
-
 		.key {
 			border: .4rem solid white;
 			border-radius: .5rem;
@@ -37,12 +35,12 @@
 			text-shadow: 0 0 .5rem rgba(255,255,255,0.5);
 			position: relative;
 		}
-
-		@media (max-width: 768px) {
-			.key {
-				width: 25%;
-			}
-		}
+		/* ----- KEYS TO GRID AT 786 ----- */
+				@media (max-width: 768px) {
+					.key {
+						width: 25%;
+					}
+				}
 
 		.playing {
 			transform: scale(1.1);
@@ -50,12 +48,10 @@
 			box-shadow: 0 0 1rem #12B4E9;
 			color: #12B4E9;
 		}
-
 		kbd {
 			display: block;
 			font-size: 4rem;
 		}
-
 		.sound {
 			font-size: 1.2rem;
 			text-transform: uppercase;
@@ -132,46 +128,44 @@
 	<audio data-key="75" src="sounds/tom.wav"></audio>
 	<audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-	const keys = Array.from(document.querySelectorAll('.key'));
+	<script>
+		const keys = Array.from(document.querySelectorAll('.key'));
 
-	const removeTransition = function(event) {
-		if(event.propertyName !== 'transform') {
-			return;
+		const removeTransition = function(event) {
+			if(event.propertyName !== 'transform') {
+				return;
+			}
+			event.target.classList.remove('playing');
 		}
-		event.target.classList.remove('playing');
-	}
 
-	const playSound = function(event) {
-		const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
-		const key = document.querySelector(`div[data-key="${event.keyCode}"]`);
-		if(!audio) return;
-		audio.currentTime = 0;
-		audio.play();
-		key.classList.add('playing');
-	}
-	const clickSound = function(event) {
-		const keyData = event.path['1'].dataset.key;
-		const audio = document.querySelector(`audio[data-key="${keyData}"]`);
-		const key = document.querySelector(`div[data-key="${keyData}"]`);
-		if (!audio) return;
-		audio.currentTime = 0;
-		audio.play();
-		key.classList.add('playing');
-	}
-	
+		const playSound = function(event) {
+			const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
+			const key = document.querySelector(`div[data-key="${event.keyCode}"]`);
+			if(!audio) return;
+			audio.currentTime = 0;
+			audio.play();
+			key.classList.add('playing');
+		}
 
-	const keysArray = Array.from(document.querySelectorAll('.key'));
-	const clicksArray = Array.from(document.querySelectorAll('.clickCatcher'));
-	keysArray.forEach(function(key) {
-		key.addEventListener('transitionend', removeTransition);
-	})
-	clicksArray.forEach(function(key){
-		key.addEventListener('click', clickSound);
-	})
-	window.addEventListener('keydown', playSound);
-</script>
-
-
+		const clickSound = function(event) {
+			const keyData = event.path['1'].dataset.key;
+			const audio = document.querySelector(`audio[data-key="${keyData}"]`);
+			const key = document.querySelector(`div[data-key="${keyData}"]`);
+			if (!audio) return;
+			audio.currentTime = 0;
+			audio.play();
+			key.classList.add('playing');
+		}
+		
+		const keysArray = Array.from(document.querySelectorAll('.key'));
+		const clicksArray = Array.from(document.querySelectorAll('.clickCatcher'));
+		keysArray.forEach(function(key) {
+			key.addEventListener('transitionend', removeTransition);
+		})
+		clicksArray.forEach(function(key){
+			key.addEventListener('click', clickSound);
+		})
+		window.addEventListener('keydown', playSound);
+	</script>
 </body>
 </html>
