--- a/pages/day03.html
+++ b/pages/day03.html
@@ -8,14 +8,20 @@
 	<h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
 	<div class="controls">
-		<label for="spacing">Spacing:</label>
-		<input id="spacing" type="range" name="spacing" min="2" max="200" value="10" data-sizing="px">
+		<div>
+			<label for="spacing">Spacing:</label>
+			<input id="spacing" type="range" name="spacing" min="2" max="200" value="10" data-sizing="px">
+		</div>
 
-		<label for="blur">Blur:</label>
-		<input id="blur" type="range" name="blur" min="0" max="25" value="2" data-sizing="px">
+		<div>
+			<label for="blur">Blur:</label>
+			<input id="blur" type="range" name="blur" min="0" max="25" value="2" data-sizing="px">
+		</div>
 
-		<label for="base">Base Color</label>
-		<input id="base" type="color" name="base" value="#12B4E9">
+		<div>
+			<label for="base">Base Color</label>
+			<input id="base" type="color" name="base" value="#12B4E9">
+		</div>
 	</div>
 
 	<img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
@@ -44,7 +50,30 @@
 			color: white;
 			font-family: 'helvetica neue', sans-serif;
 			font-weight: 100;
+			font-size: 40px;
+		}
+		h1 {
 			font-size: 50px;
+		}
+
+		@media (max-width: 940px) {
+			body {
+				font-size: 30px;
+			}
+			h1 {
+				font-size: 40px;
+			}
+			img {
+				width: calc(100% - (var(--spacing) * 2));
+			}
+		}
+		@media (max-width: 640px) {
+			body {
+				font-size: 20px;
+			}
+			h1 {
+				font-size: 30px;
+			}
 		}
 
 		.controls {
@@ -58,7 +87,6 @@
 
 	<script>
 		const inputs = document.querySelectorAll('.controls input');
-		console.log(inputs);
 
 		function handleUpdate() {
 			const suffix = this.dataset.sizing || '';
