--- a/pages/day08.html
+++ b/pages/day08.html
@@ -67,7 +67,7 @@
 		}
 
 		canvas.addEventListener('mousemove', draw);
-		canvas.addEventListener('mousedown', () => {
+		canvas.addEventListener('mousedown', (event) => {
 			isDrawing = true;
 			lastX = event.offsetX;
 			lastY = event.offsetY;
