--- a/pages/day12.html
+++ b/pages/day12.html
@@ -44,6 +44,8 @@
 
 		function keyinAround(e) {
 			pressed.push(e.key);
+			pressed.splice(-secretContent.length - 1, pressed.length - secretCode.length);
+			console.log(pressed);
 			if (pressed.join('').includes(secretCode)) {
 				contentDiv.innerHTML = secretContent;
 				cornify_add();
