--- a/pages/day11.html
+++ b/pages/day11.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>HTML Video Player</title>
 	<link rel="stylesheet" href="day11-style.css">
+	<script src="https://use.fontawesome.com/02a60f5e08.js"></script>
 </head>
 <body>
-	 <div class="player">
-		<video class="player__video viewer" src="ClintEastwood-HY2017.mp4"></video>
+	<div class="player">
+		<video class="player__video viewer" src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
 
 		<div class="player__controls">
 			<div class="progress">
@@ -18,6 +19,7 @@
 			<input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
 			<button data-skip="-10" class="player__button">« 10s</button>
 			<button data-skip="25" class="player__button">25s »</button>
+			<button data-skip="1238" class="player__button fullscreen"><i class="fa fa-expand" aria-hidden="true"></i></button>
 		 </div>
 	</div>
 
@@ -30,6 +32,9 @@
 		const toggle = player.querySelector('.toggle');
 		const skipButtons = player.querySelectorAll('[data-skip]');
 		const ranges = player.querySelectorAll('.player__slider');
+		const fullscreen = player.querySelector('.fullscreen');
+
+		let isFullscreen = false;
 
 	//Build Functions
 		//Toggles video playing/not
@@ -47,7 +52,6 @@
 		}
 		//skip by predefined amount
 		function skip() {
-			console.log(this.dataset)
 			video.currentTime += parseFloat(this.dataset.skip);
 		}
 		//change volume/playbackRate
@@ -64,6 +68,39 @@
 			const scrubTime = (e.offsetX / progress.offsetWidth) * video.duration;
 			video.currentTime = scrubTime;
 		}
+		//Fullscreen toggle
+		function toggleFS() {
+			if (!isFullscreen) {
+				if (player.requestFullscreen) {
+					player.requestFullscreen();
+				} else if (player.msRequestFullscreen) {
+					player.msRequestFullscreen();
+				} else if (player.mozRequestFullScreen) {
+					player.mozRequestFullScreen();
+				} else if (player.webkitRequestFullscreen) {
+					player.webkitRequestFullscreen();
+				}
+			} else {
+				if (document.exitFullscreen) {
+					document.exitFullscreen();
+				} else if (document.msExitFullscreen) {
+					document.msExitFullscreen();
+				} else if (document.mozExitFullScreen) {
+					document.mozExitFullScreen();
+				} else if (document.webkitExitFullscreen) {
+					document.webkitExitFullscreen();
+				}
+			}
+		}
+
+		function fullscreenFlag() {
+			isFullscreen = !isFullscreen;
+			if (isFullscreen) {
+				fullscreen.innerHTML = `<i class="fa fa-compress" aria-hidden="true"></i>`;
+			} else {
+				fullscreen.innerHTML = `<i class="fa fa-expand" aria-hidden="true"></i>`;
+			}
+		}
 
 	//Event Listeners
 		video.addEventListener('click', togglePlay);
@@ -71,18 +108,19 @@
 		video.addEventListener('pause', updateButton);
 		video.addEventListener('timeupdate', handleProgress);
 		toggle.addEventListener('click', togglePlay);
+		fullscreen.addEventListener('click', toggleFS);
 		skipButtons.forEach(button => button.addEventListener('click', skip));
 		ranges.forEach(range => range.addEventListener('change', handleRangeUpdate));
 		ranges.forEach(range => range.addEventListener('mousemove', handleRangeUpdate));
 
 		let mouseDown = false;
 
+		['webkitfullscreenchange', 'fullscreenchange', 'mozfullscreenchange', 'msfullscreenchange'].forEach(evt => document.addEventListener(evt, fullscreenFlag));
+
 		progress.addEventListener('click', scrub);
 		progress.addEventListener('mousemove', (e) => mouseDown && scrub(e));
 		progress.addEventListener('mousedown', () => mouseDown = true);
 		progress.addEventListener('mouseup', () => mouseDown = false);
-		
-
 	</script>
 </body>
 </html>
